[package]
name = "jcers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "proc-macro for jcers"
authors = ["Abrahum<307887491@qq.com>"]
homepage = "https://github.com/abrahum/jcers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
derive = ["jcers_proc"]


[dependencies]
bytes = "1.1"
jcers_proc = { version = "0.1.0",path = "../jcers_proc",optional = true }

[dev-dependencies]
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
